# efftester

./: .gitignore  .ocamlformat  .travis.yml  Makefile  dune  efftester.opam
src/: ci_tests.ml  dune  effast.ml  effcheck.ml  effenv.ml  effgen.ml  effmain.ml  effprint.ml  effshrink.ml  effstat.ml  efftester.ml  effunif.ml
